--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
 - download packages (for i in $(cat packages); do sudo apt install $i; done) - names could be different on different distros
 - vimsetup.sh - installs vim plugins
-- mkdir ~/.markuzo && cp -r path/ ~/.markuzo/path/
+- mkdir ~/.markuzo && cp -r path/ ~/.markuzo/ - add this in .bashrc PATH=bla:$PATH
 - cp tmux.conf ~/.tmux.conf && cp vimrc ~/.vimrc
 - git config --global user.name ""
 - git config --global user.email ""
